samples/_failures_safe/1761001969_952f06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a19e11ba.c: In function ‘main’:
./samples/SAFE/__tmp_a19e11ba.c:137: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a19e11ba.c:136:5: error: expected declaration or statement at end of input
  136 |     if
      |     ^~
